bug 128572 CPU usage jumps to 100% when loading a page with wrong charset r=bstell,sr=rbs